# MLOps74

./: .coverage  README.md  requirements.txt
.dvc/: config
htmlcov/: config-3_11_py.html  config_py.html  d_79601e33e2b522df_make_dataset_py.html  d_90b809ffeb67f2a5___init___py.html  d_90b809ffeb67f2a5_test_data_py.html  d_90b809ffeb67f2a5_test_model_py.html  d_90b809ffeb67f2a5_test_training_py.html  index.html  status.json  (+3 more)
mlops74/: .gitignore  Makefile  README.md  coverage_run1.txt  data.dvc  docker-image.yml  pyproject.toml  requirements.txt  requirements_fast.txt  requirements_workflow.txt
mlops74/.github/workflows/: docker_workflow.yml  tests.yml
mlops74/deployment/local/logs/config/: 20240117180808481-startup.cfg  20240117190549944-shutdown.cfg  20240117190557406-startup.cfg  20240117190724720-shutdown.cfg
mlops74/dockerfiles/: fastapi.dockerfile  predict_model.dockerfile  train_model.dockerfile  train_model2.dockerfile
mlops74/docs/: mkdocs.yaml
mlops74/docs/source/: index.md
mlops74/fastapi/: main.py
mlops74/models/: checkpoints.dvc
mlops74/reports/: README.md
mlops74/reports/figures/: Untitled Diagram.drawio
mlops74/smoke/: __init__.py  data.dvc  train_model.py  train_model2.py
mlops74/smoke/config/: default_config.yaml
mlops74/smoke/config/experiment/: exp1.yaml  exp2.yaml  exp3.yaml
mlops74/smoke/data/: make_dataset.py
mlops74/smoke/models/: model.py  model2.py
mlops74/smoke/myfastapi/: main.py
mlops74/smoke/myfastapi/models/: model.py  model_profiling.prof
mlops74/tests/: test_data.py  test_model.py  test_training.py
(+2 files in other folders)
